after user and recipe added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,15 +22,12 @@
         <div class="container">
           <nav class="nav">
             <div class="container">
-              <div class="nav-left">
+              {{!-- <div class="nav-left">
                 <a class="nav-item" href="/">
                   <img src="/img/cooking.png" alt="Description">
                 </a>
-              </div>
+              </div> --}}
               <span class="nav-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
               </span>
               <div class="nav-right nav-menu">
                 <a class="nav-item" href=/userAuth/login>
@@ -40,9 +37,9 @@
                   Register
                 </a>
                 <a class="nav-item" href=/search>
-                  Find Great Recipe
+                  Search
                 </a>
-                <a class="nav-item" href=/userAuth/favrecipe>
+                <a class="nav-item" href=/favrecipe>
                   My Meals
                 </a>
                 <a class="nav-item" href=#>
@@ -74,6 +71,7 @@
     {{!-- <script async type="text/javascript" src="../js/bulma.js"></script> --}}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="/js/script.js" charset="utf-8"></script>
+    <script src="/js/scriptPostLogin.js" charset="utf-8"></script>
     {{!-- <script>const GOOGLE_PLACE_KEY = {{ GOOGLE_PLACE_KEY }}</script> --}}
   </body>
   </html>
