--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -34,6 +34,7 @@ Upon clicking on pictures, recipe shows up --}}
 
       <div class='resultContainer'>
         <div id='recipePageLeft'>
+          <h1 id='calories'>calories</h1>
         </div>
         <div id='recipePageRight'>
           <ul class = 'ingredientList'>
