--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,6 +1,6 @@
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  color: #fff;
+  color: #444;
 }
 .is-dark {
   background-color: #F62459;
