--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,10 @@
   height: 50px;
 }
 
+span{
+  text-decoration: underline;
+}
+
 /*body {
 	background: #fafafa url(https://jackrugile.com/images/misc/noise-diagonal.png);
 	color: #444;
