--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,18 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">
 
 </head>
 
 <body>
-
-
-    <title>Landing - Free Bulma template</title>
+    <title>Landing</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     {{!-- <link rel="stylesheet" type="text/css" href="/css/bulma.css"> --}}
-    <link rel="stylesheet" type="text/css" href="/css/landing.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <section class="hero is-fullheight is-dark">
@@ -36,17 +33,11 @@
                 <a class="nav-item" href=/userAuth/register>
                   Register
                 </a>
-                <a class="nav-item" href=/search>
-                  Search
+                <a class="nav-item" href=/>
+                  Home
                 </a>
-                <a class="nav-item" href=/favrecipe>
+                <a class="nav-item" href=/favrecipe id='mymeals'>
                   My Meals
-                </a>
-                <a class="nav-item" href=#>
-                  Settings
-                </a>
-                <a class="nav-item" href=#>
-                  Contact
                 </a>
               </div>
             </div>
