--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -1,3 +1,66 @@
+<link rel="stylesheet" type="text/css" href="/css/login.css">
+
+
+  <title>Sign-Up/Login Form</title>
+  {{!-- <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'> --}}
+  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> --}}
+
+    <div class="form">
+
+      <ul class="tab-group">
+        <li class="tab"><a href="/userAuth/register">Sign Up</a></li>
+        <li class="tab active"><a href="/userAuth/login">Log In</a></li>
+      </ul>
+
+      <div class="tab-content">
+
+        <div id="login">
+          <h1>Welcome Back</h1>
+      <form action="/userAuth/login" method="post">
+
+            <div class="field-wrap">
+              <label>
+                Name<span class="req">*</span>
+              </label>
+              <input type="text" name = 'name' required autocomplete="off" />
+            </div>
+
+          <div class="field-wrap">
+            <label>
+              Email Address<span class="req">*</span>
+            </label>
+            <input type="email" name='email' required autocomplete="off"/>
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Set A Password<span class="req">*</span>
+            </label>
+            <input type="password" name='password' required autocomplete="off"/>
+          </div>
+
+          <button type="submit" class="button button-block"/>Log In</button>
+
+          </form>
+
+        </div>
+
+
+        <div id="login">
+        </div>
+
+      </div><!-- tab-content -->
+
+</div>
+
+<!-- /form -->
+  {{!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+ --}}
+    {{!-- <script src="/js/login.js"></script> --}}
+
+
+
+{{!--
 <h1>login page</h1>
 
 <form action="/userAuth/login" method="post">
@@ -23,4 +86,4 @@
   </div>
 
   <button>Login</button>
-</form>
+</form> --}}
