--- a/views/userAuth/register.handlebars
+++ b/views/userAuth/register.handlebars
@@ -1,4 +1,58 @@
-<h2>Submit new user</h2>
+<link rel="stylesheet" type="text/css" href="/css/register.css">
+
+<title>Sign-Up/Login Form</title>
+{{!-- <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'> --}}
+{{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> --}}
+
+  <div class="form">
+
+    <ul class="tab-group">
+      <li class="tab active"><a href="/userAuth/register">Sign Up</a></li>
+      <li class="tab"><a href="/userAuth/login">Log In</a></li>
+    </ul>
+
+    <div class="tab-content">
+
+      <div id="register">
+        <h1>Sign Up for Free</h1>
+    <form action="/userAuth/register" method="post">
+
+          <div class="field-wrap">
+            <label>
+              Name<span class="req">*</span>
+            </label>
+            <input type="text" name = 'name' required autocomplete="off" />
+          </div>
+
+        <div class="field-wrap">
+          <label>
+            Email Address<span class="req">*</span>
+          </label>
+          <input type="email" name='email' required autocomplete="off"/>
+        </div>
+
+        <div class="field-wrap">
+          <label>
+            Set A Password<span class="req">*</span>
+          </label>
+          <input type="password" name='password' required autocomplete="off"/>
+        </div>
+
+        <button type="submit" class="button button-block"/>Get Started</button>
+
+        </form>
+
+      </div>
+
+
+      <div id="login">
+      </div>
+
+    </div><!-- tab-content -->
+
+</div>
+
+{{!-- <h2>Submit new user</h2>
 {{flash}}
 <form action="/userAuth/register" method="post">
   <div class="form-group">
@@ -23,4 +77,4 @@
   </div>
 
   <button>Create New User</button>
-</form>
+</form> --}}
