--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
                   Register
                 </a>
                 <a class="nav-item" href=/>
-                  Home
+                  Home / Search
                 </a>
                 <a class="nav-item" href=/favrecipe id='mymeals'>
                   My Meals
