--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -34,15 +34,16 @@ Upon clicking on pictures, recipe shows up --}}
 
     <div id='searchResults' class='resultContainer'>
     </div>
+    <button id='next'>More Results</button>
 
-      <div class='resultContainer'>
+      <div class='singleRecipeContainer'>
         <div id='recipePageLeft'>
-          <div id='bottomleft'></div>
+          <div id='bottomleft'>
+          </div>
         </div>
         <div id='recipePageRight'>
           <ul class = 'ingredientList'>
           </ul>
         </div>
-        <button id='next'>Next</button>
         <img src='/img/spinner.gif' id='spinner'></img>
       </div>
