--- a/public/css/search.css
+++ b/public/css/search.css
@@ -17,6 +17,7 @@
   width: 600px;
   color: #FFFFFF;
   background: #3dd28d;
+  height: 30px;
   padding: 20px;
   font:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 30px;
@@ -45,12 +46,64 @@ h1{
 
 .resultContainer{
   margin-top: 40px;
-  margin-bottom: 0px;
+  margin-bottom: 40px;
   margin-left: 100px;
   margin-right: 100px;
   display: flex;
   flex-wrap: wrap;
-  background-color: (255,255,255,1);
+}
+
+.singleRecipeContainer{
+  display:table;
+  position: relative;
+  top: 40px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+  margin-left: 100px;
+  margin-right: 100px;
+  /*display: flex;*/
+  /*flex-wrap: wrap;*/
+  /*align-items: flex-start;*/
+  /*justify-content: flex-start;*/
+  background-color:rgba(0, 0, 0, 0.7);
+  color: #FFFFFF;
+  padding: 20px;
+  border-radius: 10px;
+  border-style: solid;
+  border: 1px;
+}
+#recipePageLeft, #recipePageRight {
+    display: table-cell
+}
+#recipePageLeft{
+  width: 600px;
+}
+#recipePageRight{
+  width: 600px;
+}
+/*#bottomleft{
+  position: relative;
+  bottom: 0
+}*/
+#bottomleft p{
+  display: inline-block;
+  width: 150px;
+  font-size: 18px;
+}
+
+
+
+button{
+  /*margin: auto;*/
+  width: 200px;
+  height: 25px;
+  color: #FFFFFF;
+  background: #3dd28d;
+  padding: 20px;
+  font:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 20px;
+  cursor: pointer;
+  line-height: 10px;
 }
 
 .imgDisplay{
@@ -69,10 +122,8 @@ h1{
     width: 600px;
 }
 
-.enabled{
-  background-color: pink;
-  width: 100px;
-  height: 50px;
+li{
+  list-style: circle;
 }
 
 span{
