--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -13,35 +13,41 @@
 </h2>
 
 <h2 class="subtitle is-4">
+  <div class="table-title">
   <span>Planned Meals</span>
+</div>
 </h2>
   <table>
+    <table class="table-fill">
+      <thread>
     <tr>
       <th>Name</th>
       <th>Calories</th>
-      <th>Time Required</th>
+      <th>Time</th>
       <th>Ingredients Required</th>
-      <th>Cooking Notes</th>
+      <th>Cook Notes</th>
       <th> </th>
     </tr>
+  </thread>
 
     {{#each dbitems as |recipe|}}
     <tr>
-      <td>{{recipe.name}}</td>
+      <td class="text-left">{{recipe.name}}</td>
       <td class='calories'>{{recipe.calories}}</td>
-      <td>{{recipe.timeDisplay}}</td>
-      <td>
+      <td class="text-left">{{recipe.timeDisplay}}</td>
+      <td class="text-left">
         <ul>
           {{#each recipe.ingredients as |ingredient|}}
             <li> {{ingredient}} </li>
           {{/each}}
         </ul>
       </td>
-      <td>
+      <td class="text-left">
         {{recipe.cookingnotes}}
       </td>
-      <td>
-          <button id='edit' value='{{recipe.id}}'>edit</button>
+      <td class='text-center'>
+          <button id='good' value='{{recipe.id}}'>Cook Again</button>
+          <button id='bad' value='{{recipe.id}}'>Not yummy</button>
       </td>
     </tr>
 
@@ -49,17 +55,10 @@
     {{/each}}
   </table>
 
-  <form action='/favrecipe/removeAll' method=post >
+<div class=buttons>
+  <form action='/favrecipe/removeAll' method=post class='delete'>
     <button id=delete>DELETE ALL RECIPES</button>
   </form>
 
-  <button><a href='/userAuth/logout'>LOG OUT</a></button>
-
-{{!-- {{else }}
-<h1 class="title is-2">
-  Please <span><a href = '/userAuth/register'> signup / </a> <a href = '/userAuth/login'> login </a> </span> to access this page
-</h1>
-
-{{/if}} --}}
-
-{{!-- need to add buttons here, and add functionality to it??? --}}
+  <button id='logout'><a href='/userAuth/logout'>LOG OUT</a></button>
+</div>
