--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -46,8 +46,8 @@
         {{recipe.cookingnotes}}
       </td>
       <td class='text-center'>
-          <button id='good' value='{{recipe.id}}'>Cook Again</button>
-          <button id='bad' value='{{recipe.id}}'>Not yummy</button>
+          <button id='good' value='{{recipe.id}}'>Cook Again?</button>
+          <button id='bad' value='{{recipe.id}}'>Never ever!</button>
       </td>
     </tr>
 
