--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -20,23 +20,20 @@
 
             <div class="field-wrap">
               <label>
-                Name<span class="req">*</span>
               </label>
-              <input type="text" name = 'name' required autocomplete="off" />
+              <input type="text" name = 'name' placeholder='Name' required autocomplete="off" />
             </div>
 
           <div class="field-wrap">
             <label>
-              Email Address<span class="req">*</span>
             </label>
-            <input type="email" name='email' required autocomplete="off"/>
+            <input type="email" name='email' placeholder='Email Address' required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
             <label>
-              Set A Password<span class="req">*</span>
             </label>
-            <input type="password" name='password' required autocomplete="off"/>
+            <input type="password" name='password' placeholder='Set a Password' required autocomplete="off"/>
           </div>
 
           <button type="submit" class="button button-block"/>Log In</button>
