--- a/views/userAuth/register.handlebars
+++ b/views/userAuth/register.handlebars
@@ -17,26 +17,23 @@
         <h1>Sign Up for Free</h1>
     <form action="/userAuth/register" method="post">
 
-          <div class="field-wrap">
-            <label>
-              Name<span class="req">*</span>
-            </label>
-            <input type="text" name = 'name' required autocomplete="off" />
-          </div>
+      <div class="field-wrap">
+        <label>
+        </label>
+        <input type="text" name = 'name' placeholder='Name' required autocomplete="off" />
+      </div>
 
-        <div class="field-wrap">
-          <label>
-            Email Address<span class="req">*</span>
-          </label>
-          <input type="email" name='email' required autocomplete="off"/>
-        </div>
+    <div class="field-wrap">
+      <label>
+      </label>
+      <input type="email" name='email' placeholder='Email Address' required autocomplete="off"/>
+    </div>
 
-        <div class="field-wrap">
-          <label>
-            Set A Password<span class="req">*</span>
-          </label>
-          <input type="password" name='password' required autocomplete="off"/>
-        </div>
+    <div class="field-wrap">
+      <label>
+      </label>
+      <input type="password" name='password' placeholder='Set a Password' required autocomplete="off"/>
+    </div>
 
         <button type="submit" class="button button-block"/>Get Started</button>
 
