--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
               </span>
               <div class="nav-right nav-menu">
                 <a class="nav-item" href=/userAuth/login>
-                  Login
+                  Login {{flash}}
                 </a>
                 <a class="nav-item" href=/userAuth/register>
                   Register
