--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -15,6 +15,7 @@
       <div class="tab-content">
 
         <div id="login">
+          <h2>{{loginflash}}</h2>
           <h1>Welcome Back</h1>
       <form action="/userAuth/login" method="post">
 
@@ -49,38 +50,3 @@
       </div><!-- tab-content -->
 
 </div>
-
-<!-- /form -->
-  {{!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
- --}}
-    {{!-- <script src="/js/login.js"></script> --}}
-
-
-
-{{!--
-<h1>login page</h1>
-
-<form action="/userAuth/login" method="post">
-  <div class="form-group">
-    <label>
-      Name:
-      <input type="text" name="name" placeholder="Submit your name">
-    </label>
-  </div>
-
-  <div class="form-group">
-    <label>
-      Email:
-      <input type="text" name="email" placeholder="e.g. jane@gmail.com">
-    </label>
-  </div>
-
-  <div class="form-group">
-    <label>
-      Password:
-      <input type="password" name="password" placeholder="password min. 8">
-    </label>
-  </div>
-
-  <button>Login</button>
-</form> --}}
