flash msg and back button attached to popstate

--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -62,5 +62,5 @@
     <button id=delete>DELETE ALL RECIPES</button>
   </form>
 
-  <button id='logout'><a href='/userAuth/logout'>LOG OUT</a></button>
+  <a href='/userAuth/logout'><button id='logout'>LOG OUT</button></a>
 </div>
