--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,6 +61,8 @@
     </section>
     {{!-- <script async type="text/javascript" src="../js/bulma.js"></script> --}}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    {{!-- for chat - experimental --}}
+    {{!-- <script src="/socket.io/socket.io.js"></script> --}}
     <script src="/js/script.js" charset="utf-8"></script>
   </body>
   </html>
