--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -19,11 +19,11 @@
           <h1>Welcome Back</h1>
       <form action="/userAuth/login" method="post">
 
-            <div class="field-wrap">
+            {{!-- <div class="field-wrap">
               <label>
               </label>
               <input type="text" name = 'name' placeholder='Name' required autocomplete="off" />
-            </div>
+            </div> --}}
 
           <div class="field-wrap">
             <label>
