--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,8 +33,11 @@
                 <a class="nav-item" href=/userAuth/register>
                   Register
                 </a>
-                <a class="nav-item" href=/>
-                  Home / Search
+                <a class="nav-item" href=/home/all>
+                  Home
+                </a>
+                <a class="nav-item" href=/search>
+                  Search
                 </a>
                 <a class="nav-item" href=/favrecipe id='mymeals'>
                   My Meals
