--- a/views/userAuth/login.handlebars
+++ b/views/userAuth/login.handlebars
@@ -2,8 +2,6 @@
 
 
   <title>Sign-Up/Login Form</title>
-  {{!-- <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'> --}}
-  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> --}}
 
     <div class="form">
 
@@ -18,12 +16,6 @@
           <h2>{{loginflash}}</h2>
           <h1>Welcome Back</h1>
       <form action="/userAuth/login" method="post">
-
-            {{!-- <div class="field-wrap">
-              <label>
-              </label>
-              <input type="text" name = 'name' placeholder='Name' required autocomplete="off" />
-            </div> --}}
 
           <div class="field-wrap">
             <label>
@@ -43,10 +35,9 @@
 
         </div>
 
-
         <div id="login">
         </div>
 
-      </div><!-- tab-content -->
+      </div>
 
 </div>
