--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,37 +1,54 @@
-body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  color: #444;
-}
-.nav {
-  padding: 20px 0;
-}
-.hero.is-dark .nav-item a:not(.button), .hero.is-dark a.nav-item {
-    color: #black;
-    padding: 0 30px;
-}
-.nav-item {
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #fff;
-}
-.nav-item img{
-  width: 50px;
-  height: 50px;
+html {
+  background: url(/img/background.jpg) no-repeat center center fixed;
+  background-position: center 0px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
-.nav-item .button{
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: transparent;
-  border: 2px solid #fff;
-  padding: 10px 20px;
-  height: 45px;
-  border-radius;
+.page{
+  box-shadow: 12px 0 15px -4px rgba(19, 35, 47, 0.3), -12px 0 8px -4px rgba(19, 35, 47, 0.3);
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(19, 35, 47, 0.3), -12px 0 15px -4px rgba(19, 35, 47, 0.3);
+  margin: 0 7%;
+  background-color: white;
 }
-.promo-img {
-  border-radius: 10px;
-  border: 10px solid #fff;
-  height: 50%;
+
+html, .page { height:100%; }
+
+body {
+  font-family: 'Lato', sans-serif;
+  color: #545454;
+}
+
+.header h1{
+  font-family: 'Raleway', sans-serif;
+  line-height: 60px;
+  font-size: 60px;
+  font-weight: 200;
+  letter-spacing: 10px;
+  text-align: center;
+  color: black;
+  margin-bottom: 2px;
+}
+
+.tagline p{
+  font-family: 'Caveat', cursive;
+  padding: 0 26px;
+  color: #545454;
+  text-align: center;
+}
+
+.nav {
+  line-height: 20px;
+  border-top: 1px solid #545454;
+  border-bottom: 1px solid #545454;
+  text-align: center;
+  padding: 20px 0px;
+  word-spacing: 50px;
+}
+
+.nav-item{
+  font-family: 'Lato', sans-serif;
+  color: #545454;
 }
