--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -62,6 +62,7 @@
         Calories: {{recipe.calories}}
       {{/if}}</td>
       <td class="text-left">
+        Serves: {{recipe.serving}}
         <ul>
           <form action="/ingredient" method="post">
           {{#each recipe.ingredients as |ingredient|}}
@@ -76,13 +77,17 @@
       </td>
       <td class="text-left, cookingnotes">
         {{recipe.cookingnotes}}<br/>
-        {{!-- <td class='text-center'> --}}
-          <form id='comments' action='/favrecipe/update' method='post'>
-            {{!-- <input id='commentbox' type="text" name='comment' placeholder="comment"> --}}
-            <textarea form ="comments" rows="10" name='comment' placeholder="comment"></textarea>
-            <input id='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'><br/>
+          <form class='comments' action='/favrecipe/update' method='post'>
+            <input id='commentbox' type="text" name='comment' placeholder="comment">
+            {{!-- <textarea form ="comments" rows="10" name='comments' placeholder="comments"></textarea> --}}
+            <input class='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'><br/>
             <button>submit notes</button>
           </form>
+          <form class='delete' action='/favrecipe/deleteOne' method='post'>
+            <input class='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'>
+            <button>delete this recipe</button>
+          </form>
+
         {{!-- </td> --}}
       </td>
     </tr>
