--- a/views/homeOneRecipe.handlebars
+++ b/views/homeOneRecipe.handlebars
@@ -12,13 +12,16 @@
       <img src = {{onerecipe.imageUrl}} height=200 width=300>
   </div>
   <div id='recipePageRight'>
-    <p><u>{{onerecipe.Servings}}</u></p>
+    <p><u>
+      Servings: {{onerecipe.serving}}
+  </u></p>
     <h2>Ingredients</h2>
     <ul class='ingredientList'>
       {{#each onerecipe.ingredients}}
         <li>{{this}}</li>
       {{/each}}
     </ul>
+    <u><a href = {{onerecipe.instructionsUrl}} >Instructions</a></u><br/>
     <button id="addBtn" class="enabled">Add to My Meals</button>
     <img src="/img/spinner.gif" id="spinner3">
   </div>
