--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,31 +2,34 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">
+  <title>Plentiful</title>
+  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css"> --}}
 
 </head>
 
 <body>
-    <title>Landing</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Caveat" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
+    {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> --}}
     {{!-- <link rel="stylesheet" type="text/css" href="/css/bulma.css"> --}}
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
-    <section class="hero is-fullheight is-dark">
-      <div class="hero-head">
+    <div class="page">
+      <div class="header">
+        <h1>PLENTIFUL</h1>
+        <div class="tagline"><p>==Your Recipe Diary==</p></div>
+      </div>
+      {{!-- <div class="hero-head">
         <div class="container">
           <nav class="nav">
             <div class="container">
-              {{!-- <div class="nav-left">
-                <a class="nav-item" href="/">
-                  <img src="/img/cooking.png" alt="Description">
-                </a>
-              </div> --}}
               <span class="nav-toggle">
               </span>
-              <div class="nav-right nav-menu">
+              <div class="nav-right nav-menu"> --}}
+              <div class ="nav">
+                
                 <a class="nav-item" href=/userAuth/login>
                   Login {{flash}}
                 </a>
@@ -43,14 +46,15 @@
                   My Meals
                 </a>
               </div>
+              {{!-- </div>
             </div>
           </nav>
         </div>
-      </div>
+      </div> --}}
 
       {{{ body }}}
 
-      <div class="hero-foot">
+      {{!-- <div class="hero-foot">
         <div class="container">
           <div class="tabs is-centered">
             <ul>
@@ -60,9 +64,8 @@
             </ul>
           </div>
         </div>
-      </div>
-    </section>
-    {{!-- <script async type="text/javascript" src="../js/bulma.js"></script> --}}
+      </div> --}}
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     {{!-- for chat - experimental --}}
     {{!-- <script src="/socket.io/socket.io.js"></script> --}}
