--- a/public/css/favrecipe.css
+++ b/public/css/favrecipe.css
@@ -1,238 +1,89 @@
-.is-dark {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)),linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url('/img/teapot background.jpeg');
-  background-size: cover;
-}
-
-span{
-  font-size: 120%;
-  text-decoration: underline;
-}
-
-body{
-  color: white;
-  font-size: 20px;
-}
-
-table{
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-th{
-  color: white;
-  background-color: black;
-}
-
-button{
-  margin: auto;
-  width: 150px;
-  color: #FFFFFF;
-  background: #3dd28d;
-  /*padding: 20px;*/
-  font:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 20px;
+a {
+  text-decoration: none;
   cursor: pointer;
+  color: #545454;
+  display: inline-flex;
+  vertical-align: middle;
 }
 
-/*#good, #bad{
-  width:100%;
-  height:25px;
-  font-size: 12px;
-  color: black;
-}*/
-
-.buttons{
-  /*margin-top: 20px;*/
-  flex-wrap: wrap;
-  display: flex;
-  /*margin-bottom: 40px;*/
+h1{
+  margin-top: 0;
 }
 
-#delete{
-  position: absolute;
-  left: 1000px;
-  background-color: red;
-  display: block;
-}
-
-#logout{
-  display: block;
-}
-
-#commentbox{
-  border: 4px solid rgba(0,0,0,0.1);
-	padding: 8px 10px;
-
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-
-	outline: 0;
-  cursor: pointer;
-}
-
-.content ul{
-  list-style: circle;
-  color: white;
-  margin-left: 150px;
-}
-
-.content button {
-     background:none!important;
-     color:inherit;
-     border:none;
-     padding:0!important;
-     font: inherit;
-     /*border is optional*/
-     border-bottom:1px solid #444;
-     cursor: pointer;
-     width: 500px;
-     text-align: left;
-     display: inline-block;
-}
-
-table is-bordered
-
-/*table template copied, not cleaned up yet*/
-/*body {
-  background-color: #3e94ec;
-  font-family: "Roboto", helvetica, arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  text-rendering: optimizeLegibility;
-}
-
-div.table-title {
-  display: block;
-  margin: auto;
-  max-width: 1200px;
-  padding:5px;
-  width: 100%;
-}
-
-.table-title h3 {
-   color: #fafafa;
-   font-size: 30px;
-   font-weight: 400;
-   font-style:normal;
-   font-family: "Roboto", helvetica, arial, sans-serif;
-   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-   text-transform:uppercase;
-}
-
-
-/*** Table Styles **/
-
-.table-fill {
-  background: white;
-  border-radius:3px;
-  border-collapse: collapse;
-  height: 320px;
-  margin: auto;
-  max-width: 1200px;
-  padding:5px;
-  width: 100%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  animation: float 5s infinite;
-}
-
-th {
-  color:#D5DDE5;;
-  background:#1b1e24;
-  border-bottom:4px solid #9ea7af;
-  border-right: 1px solid #343a45;
-  font-size:23px;
-  font-weight: 100;
-  padding:24px;
-  text-align:left;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  vertical-align:middle;
-}
-
-th:first-child {
-  border-top-left-radius:3px;
-}
-
-th:last-child {
-  border-top-right-radius:3px;
-  border-right:none;
-}
-
-tr {
-  border-top: 1px solid #C1C3D1;
-  border-bottom-: 1px solid #C1C3D1;
-  color:#666B85;
-  font-size:16px;
-  font-weight:normal;
-  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
-}
-
-tr:hover td {
-  background:#4E5066;
-  color:#FFFFFF;
-  border-top: 1px solid #22262e;
-  border-bottom: 1px solid #22262e;
-}
-
-tr:first-child {
-  border-top:none;
-}
-
-tr:last-child {
-  border-bottom:none;
-}
-
-tr:nth-child(odd) td {
-  background:#EBEBEB;
-}
-
-tr:nth-child(odd):hover td {
-  background:#4E5066;
-}
-
-tr:last-child td:first-child {
-  border-bottom-left-radius:3px;
-}
-
-tr:last-child td:last-child {
-  border-bottom-right-radius:3px;
-}
-
-td {
-  background:#FFFFFF;
-  padding:20px;
-  text-align:left;
-  vertical-align:middle;
-  font-weight:300;
-  font-size:18px;
-  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-  border-right: 1px solid #C1C3D1;
-}
-
-td:last-child {
-  border-right: 0px;
-}
-
-th.text-left {
-  text-align: left;
-}
-
-th.text-center {
+h4{
   text-align: center;
 }
 
-th.text-right {
-  text-align: right;
-}
-
-td.text-left {
+ul {
+  list-style-type: none;
   text-align: left;
+  padding: 2px;
 }
 
-td.text-center {
-  text-align: center;
+li {
+  margin-left: 0;
 }
 
-td.text-right {
-  text-align: right;
+img {
+  margin: 2%;
+  width: 90%;
+  border-radius: 2px;
+}
+
+.row{
+  line-height: 25px;
+  display: inline-flex;
+  vertical-align: middle;
+  margin: 5px auto;
+  border-top: 1px solid #545454;
+  border-bottom: 1px solid #545454;
+  padding: 5px 1px;
+  font: 1.5em;
+}
+
+.masonry { /* Masonry container */
+    column-count: 4;
+    column-gap: 1em;
+    margin: 0 20px;
+}
+
+.item { /* Masonry bricks or child elements */
+    background-color: #eee;
+    display: inline-block;
+    margin: 0 0 2em;
+    width: 100%;
+    text-align: center;
+}
+
+.cookingnotes {
+  border-top: 1px solid #545454;
+  border-bottom: 1px solid #545454;
+  padding: 5px;
+  margin: 5px 5px;
+}
+
+.delete{
+  vertical-align: middle;
+  display: inline;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.material-icons{
+  font-size: 1.5rem;
+}
+
+.blockbutt{
+  display: block;
+  margin: 2px auto;
+  cursor: pointer;
+  /*background-color: #F1D1A0;*/
+}
+
+.butt{
+  cursor: pointer;
+  margin: 2px auto;
+  /*background-color: #F1D1A0;*/
 }
