--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -2,98 +2,50 @@
 {{!-- {{#if user}} --}}
 
 <link rel="stylesheet" type="text/css" href="/css/favrecipe.css">
-<h1 class="title is-2">
+<h4>
   Welcome back {{user.name}} !
-</h1>
+</h4>
 
-<div class="tabs is-boxed">
-  <ul>
-    <li class="is-active">
-      <a href='/favrecipe'>
-        <span class="icon is-small"><i class="fa fa-image"></i></span>
-        <span>Recipes</span>
-      </a>
-    </li>
+<div class="masonry">
+  {{#each dbitems as |recipe|}}
+    <div class="item">
 
-    <li>
-      <a href='/ingredient'>
-        <span class="icon is-small"><i class="fa fa-file-text-o"></i></span>
-        <span>Grocery List</span>
-      </a>
-    </li>
-  </ul>
-</div>
+      <img src="{{recipe.imageUrl}}">
+      {{recipe.name}}
+      <form class='delete' action='/favrecipe/deleteOne' method='post'>
+        <input class='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'>
+        <button class="delete"><i class="material-icons">delete</i></button>
+      </form>
 
-<h2 class="subtitle is-4">
-  <span> Total Consumption </span> <br>
-  {{totalCalories}} <br>
-  {{totalTime}}
-</h2>
+      <div class="row">
+        <i class="material-icons">accessibility</i>{{recipe.serving}} ||
+        <i class="material-icons">alarm</i>{{recipe.timeDisplay}} ||
+        <a href="{{recipe.instructionsUrl}}"><i class="material-icons">info</i>Steps</a>
+      </div>
 
-<h2 class="subtitle is-4">
-  <div class="table-title">
-  <span>Planned Meals</span>
-</div>
-</h2>
-  <table>
-    {{!-- <table class="table-fill"> --}}
-    <table class="table is-bordered
-">
-      <thread>
-    <tr>
-      <th class="is-narrow">Name</th>
-      <th class = "is-narrow">Time / Calories</th>
-      {{!-- <th>Time</th> --}}
-      <th>Ingredients Required</th>
-      <th>Cook Notes</th>
-      {{!-- <th> </th> --}}
-    </tr>
-  </thread>
+      <ul>
+        <form action="/ingredient" method="post">
+        {{#each recipe.ingredients as |ingredient|}}
+        <li>
+          <input type="checkbox" name="ingredient" value="{{ingredient}}">
+           {{ingredient}}
+         </li>
+        {{/each}}
+        <input class="blockbutt" type="submit" value="Add to Groceries List">
+      </form>
+      </ul>
 
-    {{#each dbitems as |recipe|}}
-    <tr>
-      <td class="text-left">{{recipe.name}}
-        <form id='details' action='/home/one/{{recipe.id}}' method='get'>
-        <button>see recipe details</button>
-        </form>
-      </td>
-      {{!-- <td class='calories'>{{recipe.calories}}</td> --}}
-      <td class="text-left">{{recipe.timeDisplay}} {{#if recipe.calories}}
-        Calories: {{recipe.calories}}
-      {{/if}}</td>
-      <td class="text-left">
-        Serves: {{recipe.serving}}
-        <ul>
-          <form action="/ingredient" method="post">
-          {{#each recipe.ingredients as |ingredient|}}
-          <li>
-            <input type="checkbox" name="ingredient" value="{{ingredient}}">
-             {{ingredient}}
-           </li>
-          {{/each}}
-          <input type="submit" value="Submit">
-        </form>
-        </ul>
-      </td>
-      <td class="text-left, cookingnotes">
-        {{recipe.cookingnotes}}<br/>
+      <div class="cookingnotes">
+        My Notes: {{recipe.cookingnotes}}<br/>
           <form class='comments' action='/favrecipe/update' method='post'>
             <input id='commentbox' type="text" name='comment' placeholder="comment">
-            {{!-- <textarea form ="comments" rows="10" name='comments' placeholder="comments"></textarea> --}}
-            <input class='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'><br/>
-            <button>submit notes</button>
-          </form>
-          <form class='delete' action='/favrecipe/deleteOne' method='post'>
             <input class='recipeid' type='hidden' name='recipeid' value='{{recipe.id}}'>
-            <button>delete this recipe</button>
+            <button class="butt">Save</button>
           </form>
+        </div>
 
-        {{!-- </td> --}}
-      </td>
-    </tr>
-
-    {{/each}}
-  </table>
+  </div>
+  {{/each}}
 
 <div class=buttons>
   <form action='/favrecipe/removeAll' method=post class='delete'>
